--- a/Music Project/helpfiles.plist
+++ b/Music Project/helpfiles.plist
@@ -4,23 +4,21 @@
 <dict>
 	<key>Topic</key>
 	<array>
-		<string>PeerAudio</string>
-		<string>Profile Data</string>
+		<string>Peer Audio</string>
+		<string>Profile</string>
 		<string>Create a room</string>
 		<string>Join a room</string>
 		<string>Add a song</string>
 		<string>Disconnect</string>
-		<string>Multipeer Connectivity</string>
 	</array>
 	<key>File</key>
 	<array>
-		<string>PeerAudio is an app.</string>
-		<string>Profile Data is set when...</string>
-		<string>Creating a room consists of...</string>
-		<string>Joining a room.</string>
-		<string>Adding a song.</string>
-		<string>Disconnecting.</string>
-		<string>MPC framework is new to iOS7.</string>
+		<string>PeerAudio is this application, created by Ryan Fraser and John Ruller. The idea behind the app is that a crowd-sourced music playlist can be created by all connected devices in a room.</string>
+		<string>You can set your profile name, tagline and image. This will be displayed when you connect to a room. If no profile is set, a default will be created, using your device name.</string>
+		<string>Creating a room sets you as the host. You can browse for guests and send them an invite to the room. As host, you are the only one able to playback the songs in the playlist.</string>
+		<string>Joining a room sets you as a guest. You automatically set to adverstise, and must wait for a host to invite you to their room. Once in a room, you can add songs to the playlist from your music library.</string>
+		<string>You are able to add songs that are locally stored on your device. Unfortunately, this mean songs located in the cloud are not accessable in this application.</string>
+		<string>Once you are finished in a room, you can selec the disconnect button to leave. If a host disconnects, the room is cleared (all guests will be disconnected).</string>
 	</array>
 </dict>
 </plist>
